--- a/research.html
+++ b/research.html
@@ -26,9 +26,6 @@
                     <span></span>
                 </button>
                 <ul class="nav-menu">
-                    <button class="nav-close">
-                        <i class="fas fa-times"></i>
-                    </button>
                     <li><a href="index.html#about">About</a></li>
                     <li><a href="index.html#skills">Skills</a></li>
                     <li><a href="projects.html">Projects</a></li>
@@ -37,6 +34,7 @@
                     <li><a href="index.html#contact" class="btn-primary">Contact Me</a></li>
                 </ul>
             </nav>
+            <div class="nav-overlay"></div>
         </header>
         <section id="books-papers" class="comic-panel">
             <div class="panel-content">
@@ -89,16 +87,21 @@
             <div class="footer-content">
                 <p>&copy; 2025 Abhit Anant Bangar. All Rights Reserved.</p>
                 <div class="social-links">
+                    <a href="https://github.com/AbhitBangar" title="GitHub" target="_blank">
+                        <svg width="24" height="24" fill="currentColor" viewBox="0 0 24 24" aria-hidden="true"><path d="M12 2C6.477 2 2 6.484 2 12.021c0 4.428 2.865 8.184 6.839 9.504.5.092.682-.217.682-.482 0-.237-.009-.868-.014-1.703-2.782.605-3.369-1.342-3.369-1.342-.454-1.154-1.11-1.462-1.11-1.462-.908-.62.069-.608.069-.608 1.004.07 1.532 1.032 1.532 1.032.892 1.53 2.341 1.088 2.91.832.091-.647.35-1.088.636-1.339-2.221-.253-4.555-1.113-4.555-4.951 0-1.093.39-1.987 1.029-2.686-.103-.253-.446-1.272.098-2.65 0 0 .84-.27 2.75 1.025A9.564 9.564 0 0 1 12 6.844c.85.004 1.705.115 2.504.337 1.909-1.295 2.748-1.025 2.748-1.025.546 1.378.203 2.397.1 2.65.64.699 1.028 1.593 1.028 2.686 0 3.847-2.337 4.695-4.566 4.944.359.309.678.92.678 1.855 0 1.338-.012 2.419-.012 2.749 0 .267.18.579.688.481C19.138 20.203 22 16.447 22 12.021 22 6.484 17.523 2 12 2Z"/></svg>
+                    </a>
                     <a href="mailto:abhitbangar333@gmail.com" title="Email">
                         <svg width="24" height="24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" viewBox="0 0 24 24"><rect x="2" y="4" width="20" height="16" rx="2"/><path d="M22 6 12 13 2 6"/></svg>
                     </a>
-                    <a href="tel:+918830088515" title="Phone">
-                        <svg width="24" height="24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" viewBox="0 0 24 24"><path d="M22 16.92v3a2 2 0 0 1-2.18 2A19.72 19.72 0 0 1 2 4.18 2 2 0 0 1 4 2h3a2 2 0 0 1 2 1.72c.13 1.05.37 2.07.72 3.06a2 2 0 0 1-.45 2.11l-1.27 1.27a16 16 0 0 0 6.29 6.29l1.27-1.27a2 2 0 0 1 2.11-.45c.99.35 2.01.59 3.06.72A2 2 0 0 1 22 16.92z"/></svg>
+                    <a href="https://www.linkedin.com/in/AbhitBangar" title="LinkedIn" target="_blank">
+                        <svg width="24" height="24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" viewBox="0 0 24 24" aria-hidden="true"><rect x="2" y="2" width="20" height="20" rx="2"/><line x1="8" y1="11" x2="8" y2="16"/><line x1="8" y1="8" x2="8" y2="8"/><line x1="12" y1="16" x2="12" y2="13"/><path d="M16 16v-3a2 2 0 0 0-4 0"/></svg>
                     </a>
-                    <a href="https://www.linkedin.com/in/AbhitBangar" target="_blank" title="LinkedIn">
+                    <a href="https://instagram.com/abhitbangar" title="Instagram" target="_blank">
+                        <svg width="24" height="24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" viewBox="0 0 24 24" aria-hidden="true"><rect x="2" y="2" width="20" height="20" rx="5"/><path d="M16 11.37A4 4 0 1 1 12.63 8 4 4 0 0 1 16 11.37z"/><line x1="17.5" y1="6.5" x2="17.5" y2="6.5"/></svg>
+                    </a>
+                    <a href="https://twitter.com/abhitbangar" title="Twitter" target="_blank">
                         <svg width="24" height="24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" viewBox="0 0 24 24" aria-hidden="true">
-                          <rect x="2" y="2" width="20" height="20" rx="2"/>
-                          <path d="M8 11v5M8 8v.01M12 16v-5M12 16v-3a2 2 0 1 1 4 0v3"/>
+                            <path d="M6 4h4.5l3.5 5 4-5H22l-6.5 8.5L22 20h-4.5l-3.5-5-4 5H2l6.5-8.5L2 4h4z"/>
                         </svg>
                     </a>
                 </div>
